force-app/main/default/objects/Visit_Expense__c/Visit_Expense__c.object-meta.xml
<CustomObject>
    <description>Expense record linked to a physician visit. Tracks meals, travel, accommodation, and sample costs incurred by the sales rep during or for a visit.</description>
    <label>Visit Expense</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>