force-app/main/default/objects/Visit_Expense__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount of the expense in the org currency (INR).</description>
    <inlineHelpText>Enter the expense amount in INR.</inlineHelpText>
    <label>Amount (INR)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>