force-app/main/default/objects/Visit_Expense__c/fields/GST_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Invoice_Number__c</fullName>
    <description>GST invoice number from the receipt/bill for ITC claim purposes.</description>
    <inlineHelpText>Enter the invoice number from the GST bill (e.g. INV-2024-001)</inlineHelpText>
    <label>GST Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>