force-app/main/default/objects/Visit_Expense__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes about the expense.</description>
    <inlineHelpText>Optional notes or justification for this expense.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>