force-app/main/default/objects/Visit_Expense__c/fields/Policy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Policy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true automatically when the expense Amount exceeds the configured per-visit policy limit (default $150). Triggers Finance review workflow (FR-EXP-003, BR-007).</description>
    <inlineHelpText>Automatically flagged when amount exceeds policy limit. Visible to Finance team for review.</inlineHelpText>
    <label>Policy Flag</label>
    <type>Checkbox</type>
</CustomField>