force-app/main/default/objects/Visit_Expense__c/fields/Receipt_URL__c.field-meta.xml
<CustomField>
    <fullName>Receipt_URL__c</fullName>
    <description>URL link to the receipt image or document stored in Salesforce Files or external storage.</description>
    <inlineHelpText>Paste a link to the receipt image (optional).</inlineHelpText>
    <label>Receipt URL</label>
    <type>Url</type>
</CustomField>