force-app/main/default/objects/Visit_Expense__c/fields/SGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount__c</fullName>
    <description>State GST component (half of total GST for intra-state transactions). For food: 2.5% of pre-tax amount.</description>
    <label>SGST Amount (Rs.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>