force-app/main/default/objects/Visit_Expense__c/fields/Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>Visit_Report__c</fullName>
    <description>Parent visit report this expense belongs to.</description>
    <label>Visit Report</label>
    <referenceTo>Visit_Report__c</referenceTo>
    <relationshipLabel>Visit Expenses</relationshipLabel>
    <relationshipName>Visit_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>