force-app/main/default/objects/Visit_Expense__c/validationRules/VR_004_AmountMaxLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_004_AmountMaxLimit</fullName>
    <active>true</active>
    <description>VR-004: Expense amount cannot exceed 99,999. Amounts above this threshold must be submitted via a separate Finance process.</description>
    <errorConditionFormula>Amount__c &gt; 99999</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Expense amount cannot exceed 99,999. Please contact Finance directly for larger amounts.</errorMessage>
</ValidationRule>