force-app/main/default/objects/Visit_Expense__c/validationRules/VR_010_CategoryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_010_CategoryRequired</fullName>
    <active>true</active>
    <description>VR-010: Expense Category is required at save. Uncategorised expenses cannot be processed by Finance.</description>
    <errorConditionFormula>ISBLANK(TEXT(Category__c))</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>Expense category is required. Please select a category before saving.</errorMessage>
</ValidationRule>